[gd_scene load_steps=4 format=2]

[ext_resource path="res://Componentes/Hurtbox.gd" type="Script" id=1]
[ext_resource path="res://Recursos/Sonido/Socapex - hurt.wav" type="AudioStream" id=2]


[sub_resource type="CircleShape2D" id=4]
radius = 16.4924

[node name="Hurtbox" type="Area2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="NoDamageTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
attenuation = 9.18958

[connection signal="area_entered" from="." to="." method="_on_AreaDamage_area_entered"]
[connection signal="timeout" from="NoDamageTimer" to="." method="_on_NoDamageTimer_timeout"]
